src/test/resources/json/invalid_inputs/negative_battery.json.except
Robot's battery can't be negative. Now it is -1.